fix: search heading spacing

--- a/src/assets/text-meta-content.css
+++ b/src/assets/text-meta-content.css
@@ -24,7 +24,7 @@ hgroup:has(p) {
   }
 }
 
-/* The only place this is h2 is in search results */
-h2 {
+/* The only place this is h2 is in second column of search results */
+ol:nth-of-type(2) li:first-of-type h2 {
   margin-top: 0;
 }
